[workspace]
resolver = "2"
members = ["apps/api", "prisma"]


[workspace.dependencies]
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.8", default-features = false, features = [
    "mysql",
    "postgresql",
    "rspc",
    "sqlite",
] }
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.8", default-features = false, features = [
    "mysql",
    "rspc",
    "postgresql",
    "sqlite",
] }
