[package]
name = "prisma-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prisma-client-rust = { workspace = true, default-features = false, features = [
    "mysql",
    "postgresql",
    "sqlite",
    "rspc",
] }
prisma-client-rust-cli = { workspace = true, default-features = false, features = [
    "mysql",
    "postgresql",
    "sqlite",
    "rspc",
] }

serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
