[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.18" }
tokio = { version = "1.28.2", features = ["full"] }
prisma = { path = "../../prisma" }
rspc = { version = "0.1.3", features = ["axum"] }
tracing-subscriber = { version = "0.3.17" }
log = "0.4.19"
tower-http = { version = "0.4.1", features = ["cors"] }
dotenv = "0.15.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
cuid = "1.3.1"
chrono = { version = "0.4.19", features = ["serde"] }
axum-extra = { version = "0.7.4" }
tower-cookies = { version = "0.9.0", features = ["private", "signed"] }
once_cell = "1.18.0"
