[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.18" }
tokio = { version = "1.28.2", features = ["full"] }
rspc = { version = "0.1.3", features = ["axum"] }
tracing-subscriber = { version = "0.3.17" }
log = "0.4.19"
tower-http = { version = "0.4.1", features = ["cors"] }
dotenv = "0.15.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
cuid = "1.3.1"
chrono = { version = "0.4.19", features = ["serde"] }
axum-extra = { version = "0.7.4" }
tower-cookies = { version = "0.9.0", features = ["private", "signed"] }
once_cell = "1.18.0"
magic-crypt = "3.1.12"
prisma-client-rust = { workspace = true, default-features = false, features = [
    "mysql",
    "postgresql",
    "sqlite",
    "rspc",
] }
crossbeam-channel = "0.5.8"
anyhow = "1.0.71"
thiserror = "1.0.43"
lettre = { version = "0.10", features = [
    "pool",
    "native-tls",
    "smtp-transport",
    "builder",
] }
futures = "0.3.28"
uuid = { version = "1.4.1", features = ["serde", "v4"] }
rand = { version = "0.8.5", features = ["std"] }
image = "0.24.6"
base64 = "0.21.2"
